...
                  ),
                  Padding(
                      padding: const EdgeInsets.only(top: 20.0, right: 25.0, left: 25.0),
                      child: Container(
                        child: FlatButton(
                          child: Text(
                            "Acessar",
                            style: TextStyle(color: Colors.white, fontSize: 20),
                          ),
                          onPressed: () async {
                            var loggedIn = await LoginAPI.postLogin(emailController.text, passwordController.text);
                            if (loggedIn != null) {
                              Map<String, dynamic> decoded = JwtDecoder.decode(loggedIn["token"]);
...
